; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_loss.c_test_loss.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_loss.c_test_loss.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"even\00", align 1
@test_even = common dso_local global i32 0, align 4
@quic_ctx = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"downstream\00", align 1
@test_downstream = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [14 x i8] c"bidirectional\00", align 1
@test_bidirectional = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_loss() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @test_even, align 4
  %3 = call i32 @subtest(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %2)
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @quic_ctx, i32 0, i32 0, i32 0), align 4
  store i32 %4, i32* %1, align 4
  store i32 300000, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @quic_ctx, i32 0, i32 0, i32 0), align 4
  %5 = load i32, i32* @test_downstream, align 4
  %6 = call i32 @subtest(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i32 %5)
  store i32 300000, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @quic_ctx, i32 0, i32 0, i32 0), align 4
  %7 = load i32, i32* @test_bidirectional, align 4
  %8 = call i32 @subtest(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* %1, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @quic_ctx, i32 0, i32 0, i32 0), align 4
  ret void
}

declare dso_local i32 @subtest(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
